project/stage/testing/semantic/semantic_tests/reject/void_var_decl.ul
void main() {

}

void foo(int a) {
    void fun;
}
